--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Наш магазин</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -19,13 +19,13 @@
         <h2>Наші товари</h2>
         <div>
             <h3>Товар 1</h3>
-            <img src="img/prod1.jpg" alt="Товар 1" width="200" height="150">
+            <img src="prod1.jpg" alt="Товар 1" width="200" height="150">
             <p>Опис товару 1.</p>
             <button>Додати до кошика</button>
         </div>
         <div>
             <h3>Товар 2</h3>
-            <img src="img/prod2.jpg" alt="Товар 2" width="200" height="150">
+            <img src="prod2.jpg" alt="Товар 2" width="200" height="150">
             <p>Опис товару 2.</p>
             <button>Додати до кошика</button>
         </div>
